# openenv-project-submit

./: .dockerignore  .gitignore  COMPLIANCE.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  push-to-hf.ps1  pyproject.toml  requirements.txt  run.md
RUNTIME/: .dockerignore  Dockerfile  pyproject.toml
RUNTIME/customer-service-bot/: README.md
RUNTIME/customer-service-bot/server/: app.py
RUNTIME/demo/: .dockerignore  README.md  __init__.py  client.py  models.py  pyproject.toml
RUNTIME/demo/server/: __init__.py  app.py  demo_environment.py
TRAINING/: pyproject.toml  train.py
baseline/: run.py
demo/: .dockerignore  Dockerfile  README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml  test_client.py
demo/server/: __init__.py  app.py  demo_environment.py
server/: app.py  environment.py
src/customers/: __init__.py  scenarios.py  simulator.py
src/graders/: __init__.py  base.py
src/knowledge_base/: faqs.json  policies.json  procedures.json
src/tasks/: __init__.py  base.py  easy_faq.py  hard_escalation.py  medium_complaint.py
src/utils/: __init__.py  scoring.py  sentiment.py  validators.py
tests/: test_environment.py
